--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,6 @@ find_package(Boost REQUIRED COMPONENTS system)
 
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+
+add_executable(leg_trajectory_client src/leg_trajectory_client.cc)
+target_link_libraries(leg_trajectory_client ${catkin_LIBRARIES})
