--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,13 @@ project(ardent_locomotion_planner)
 find_package(catkin REQUIRED COMPONENTS
   actionlib
   geometry_msgs
-  message_filters
+  message_filters  
+  moveit_core 
+  moveit_ros_planning 
+  moveit_ros_planning_interface 
+  moveit_visual_tools
   roscpp
+  rospy
   sensor_msgs
   tf
   tf_conversions
@@ -21,4 +26,9 @@ find_package(Boost REQUIRED COMPONENTS system)
 
 catkin_package()
 
+add_executable(leg_move_interface_test scripts/leg_move_interface_test.cpp)
+target_link_libraries(leg_move_interface_test ${catkin_LIBRARIES})
+
+
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+# install(TARGETS ${PROJECT_NAME} DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
